# heist

./: ARCHITECTURE.md  BLOG.md  DECISIONS.md  PLAN.md  PROGRESS.md  README.md  app.py  benchmark_results.json  blog_draft.md  criminal_codex.py  demo_script.md  f1_history.json  generate_charts.py  heist_colab.ipynb  hf_push.py  inference.py  judge_defense.md  openenv.yaml  post_training_push.py  pyproject.toml  training_curves.json  training_log.csv  weakness_history.json  zero_day_scheme.json  zero_day_visualization.json
.claude/: settings.local.json
agents/: adversarial_codex.py  criminal.py  expert.py  oversight.py
env/: __init__.py  heist_env.py  inference.py  models.py  openenv.yaml  pyproject.toml  reward.py  scenarios.py  tools.py  transaction_graph.py
env/heist_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
env/server/: __init__.py  app.py
eval/: evaluate.py
huggingface_tokenizers_cache/models--unsloth--Qwen2.5-7B-Instruct-bnb-4bit/snapshots/bdd404162d94997f390efbfa660eb3f21cbbc81d/: config.json
server/: app.py
tests/: test_reward_hacking.py
tools/: sync_training_data.py
train/: curriculum.py  her.py  skills.py  train_grpo.py
ui/: app.py
