[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heist"
version = "0.1.0"
description = "HEIST: AI detective vs AI criminal money laundering OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "requests>=2.28.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
train = [
    "torch>=2.1.0",
    "trl==0.29.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "unsloth>=2024.3",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.18.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["heist", "heist.env", "heist.env.server", "heist.agents", "heist.train"]
package-dir = { "heist" = ".", "heist.env" = "env", "heist.env.server" = "env/server", "heist.agents" = "agents", "heist.train" = "train" }
